Use rounded corner for status bubble on Mac

Since Mac's window has rounded corners, status bubble's corner on top of
the window corner should also be rounded. This CL make such corner
rounded on Mac.

Fixed: 855809
Change-Id: I3f5bb1e98d55429551c19e9cecae741589d5ee03
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2853828
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#877128}